--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="button">
         <button class="botones">
-            <a href="isabel.html" style="color: #fff;">CLICK AQUÍ</a>
+            <a href="isabel.html" style="color: #f1e3e3;">CLICK AQUÍ</a>
         </button>
     </div>
 
